--- a/views/news.erb
+++ b/views/news.erb
@@ -5,9 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-
     <!-- Google Fonts -->
     <!-- Swap out "Roboto" for the font(s) you want to use -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -22,55 +19,21 @@
     <link rel="stylesheet" href="/styles.css">
 
     <title>News & Weather</title>
+
+
+
+
+
   </head>
   <body>
 
     <div class="container mt-5">
-             <div class="col text-center">
-
-      <h1>Kellogg Times</h1>
+      <h1>News for you!</h1>
     </div>
-        </div>
 
-
-
-    <div class="container">
-       <div class="row">
-         <div class="col text-center">
-           <h2>News & Weather for you!</h2>
-          
-         </div>
-       </div>
-           </div>
-
- <div class="container">
-      <div class="row">
-        <div class="col text-center">
-          <h5>Yeah this websight is intentionally simple....</h5>
-        </div>
-      </div>
-           </div>
-
- <div class="container">
-      <div class="row">
-        <div class="col text-center">
-          <h5>Just input your location and you get what you want in a mobile-responsive way</h5>
-        </div>
-      </div>
-           </div>
-
-            <div class="container">
-      <div class="row">
-        <div class="col text-center">
-    <form action="/news">
-  <label>Enter your location:</label>
-  <input type="text" name="location">
-  <button type="submit" class="btn btn-primary">Go there</submit>
-</form>
-   </div>
-      </div>
-           </div>
-
+     <div class="container mt-5">
+      <h1> Weather for you!</h1>
+    </div>
 
 
 
